
IF(MSVC)
  ADD_DEFINITIONS( -D_CRT_SECURE_NO_WARNINGS )
ENDIF(MSVC)

SET(TESTNGPP_SRCS
  Exception.cpp
  AssertionFailure.cpp 
)

ADD_LIBRARY(testngpp-except-shared SHARED ${TESTNGPP_SRCS})
ADD_LIBRARY(testngpp-except-static STATIC ${TESTNGPP_SRCS})

INCLUDE_DIRECTORIES(BEFORE ${CMAKE_SOURCE_DIR}/include)

INSTALL(
   TARGETS testngpp-except-shared
   LIBRARY DESTINATION lib)
